update"overflow fixed and double scrollbar"

--- a/app/globals.css
+++ b/app/globals.css
@@ -14,6 +14,10 @@
   }
 }
 
+html {
+  overflow: hidden;
+}
+
 html,
 body {
   height: 100%;
@@ -27,6 +31,9 @@ body {
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
   position: relative;
+  margin: 0;
+  padding: 0;
+  overflow-y: auto;
 }
 
 /* Hide scrollbar and show loader by default */
@@ -52,6 +59,10 @@ body.loaded {
 * {
   box-sizing: border-box;
 }
+
+/* * {
+  outline: 1px solid red !important;
+} */
 
 @layer utilities {
   .grid-background {
